--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.8",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "gsap": "^3.8.0",
+    "postcss": "^7.0.39",
+    "postcss-loader": "^6.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
