--- a/package.json
+++ b/package.json
@@ -22,30 +22,17 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^6.0.1",
+    "eslint": "^8.37.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "node-sass": "^8.0.0",
     "sass-loader": "^10.0.0",
-    "vue-svg-loader": "^0.16.0",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "vue-svg-loader": "^0.10.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^5.0.0"
   },
   "browserslist": [
     "> 1%",
