--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "autoprefixer": "^9.8.8",
     "axios": "^0.24.0",
+    "bootstrap": "^5.3.0-alpha3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
     "gsap": "^3.8.0",
     "postcss": "^7.0.39",
